; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_eeh_pe.c_eeh_pe_get.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_eeh_pe.c_eeh_pe_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eeh_pe = type { i32 }
%struct.pci_controller = type { i32 }
%struct.eeh_pe_get_flag = type { i32, i32 }

@__eeh_pe_get = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.eeh_pe* @eeh_pe_get(%struct.pci_controller* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pci_controller*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.eeh_pe*, align 8
  %8 = alloca %struct.eeh_pe_get_flag, align 4
  %9 = alloca %struct.eeh_pe*, align 8
  store %struct.pci_controller* %0, %struct.pci_controller** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load %struct.pci_controller*, %struct.pci_controller** %4, align 8
  %11 = call %struct.eeh_pe* @eeh_phb_pe_get(%struct.pci_controller* %10)
  store %struct.eeh_pe* %11, %struct.eeh_pe** %7, align 8
  %12 = getelementptr inbounds %struct.eeh_pe_get_flag, %struct.eeh_pe_get_flag* %8, i32 0, i32 0
  %13 = load i32, i32* %5, align 4
  store i32 %13, i32* %12, align 4
  %14 = getelementptr inbounds %struct.eeh_pe_get_flag, %struct.eeh_pe_get_flag* %8, i32 0, i32 1
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %14, align 4
  %16 = load %struct.eeh_pe*, %struct.eeh_pe** %7, align 8
  %17 = load i32, i32* @__eeh_pe_get, align 4
  %18 = call %struct.eeh_pe* @eeh_pe_traverse(%struct.eeh_pe* %16, i32 %17, %struct.eeh_pe_get_flag* %8)
  store %struct.eeh_pe* %18, %struct.eeh_pe** %9, align 8
  %19 = load %struct.eeh_pe*, %struct.eeh_pe** %9, align 8
  ret %struct.eeh_pe* %19
}

declare dso_local %struct.eeh_pe* @eeh_phb_pe_get(%struct.pci_controller*) #1

declare dso_local %struct.eeh_pe* @eeh_pe_traverse(%struct.eeh_pe*, i32, %struct.eeh_pe_get_flag*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
